--- a/FlexerApp/FlexerApp.resx
+++ b/FlexerApp/FlexerApp.resx
@@ -3747,6 +3747,9 @@
         AwAAAAAAAAAAAADAAwAAwAEAAIABAACAAQAAgAEAAIABAACAAQAAgAMAAIADAACAAwAAh/8AAP//AAA=
 </value>
   </data>
+  <metadata name="bgWorker.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>164, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAkAAAAAAAEAIACR2AAAlgAAAICAAAABACAAKAgBACfZAABgYAAAAQAgAKiUAABP4QEASEgAAAEA
